--- a/index.html
+++ b/index.html
@@ -4,7 +4,47 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- HTML Meta Tags -->
     <title>Grindiest.</title>
+    <meta
+      name="description"
+      content="Check which OSRS buddy is the grindiest."
+    />
+
+    <!-- Facebook Meta Tags -->
+    <meta
+      property="og:url"
+      content="https://lassespilling.github.io/osrs_api_testing/"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Grindiest." />
+    <meta
+      property="og:description"
+      content="Check which OSRS buddy is the grindiest."
+    />
+    <meta
+      property="og:image"
+      content="https://github.com/lassespilling/osrs_api_testing/raw/main/thumbnail.jpg?raw=true"
+    />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="lassespilling.github.io" />
+    <meta
+      property="twitter:url"
+      content="https://lassespilling.github.io/osrs_api_testing/"
+    />
+    <meta name="twitter:title" content="Grindiest." />
+    <meta
+      name="twitter:description"
+      content="Check which OSRS buddy is the grindiest."
+    />
+    <meta
+      name="twitter:image"
+      content="https://github.com/lassespilling/osrs_api_testing/raw/main/thumbnail.jpg?raw=true"
+    />
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
   </head>
   <body>
     <div id="root"></div>
